Started imports and header

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -1,14 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Data Dive 2"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b0422086057e3373"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Imports\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "8d40b3bfcf6c2460"
   }
  ],
  "metadata": {
