Added credit cards .csv

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -12,15 +12,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "# Imports\n"
+    "# Imports\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.style.use('fivethirtyeight')\n",
+    "%matplotlib inline\n",
+    "\n",
+    "from sklearn import datasets, linear_model\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error,r2_score,mean_absolute_error,mean_absolute_percentage_error\n",
+    "\n",
+    "from numpy import arange\n",
+    "\n",
+    "from sklearn.model_selection import RepeatedKFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.linear_model import Lasso"
    ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-31T13:17:24.956806Z",
+     "start_time": "2023-10-31T13:17:24.946189Z"
+    }
+   },
+   "id": "8d40b3bfcf6c2460"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "8d40b3bfcf6c2460"
+   "id": "821e70ec7e49c2d"
   }
  ],
  "metadata": {
