--- a/Main.ipynb
+++ b/Main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "8d40b3bfcf6c2460",
    "metadata": {
     "ExecuteTime": {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "821e70ec7e49c2d",
    "metadata": {
     "ExecuteTime": {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "401849749bf8c97a",
    "metadata": {
     "ExecuteTime": {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "b74d2efd93dd7f2a",
    "metadata": {
     "ExecuteTime": {
@@ -246,7 +246,7 @@
        "max    2.418474e+06  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "ca4e179eec26e3b9",
    "metadata": {
     "ExecuteTime": {
@@ -653,7 +653,7 @@
        "[100 rows x 18 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "514df55472d04215",
    "metadata": {
     "ExecuteTime": {
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "6d8996d8633813d1",
    "metadata": {
     "ExecuteTime": {
@@ -769,13 +769,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "d2d012a1fc97551",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       -0.9928\n",
+       "1        0.9747\n",
+       "2       -0.9684\n",
+       "3        0.7227\n",
+       "4        0.9853\n",
+       "          ...  \n",
+       "17428   -0.9514\n",
+       "17429   -0.9675\n",
+       "17430    0.8428\n",
+       "17431    0.8481\n",
+       "17432    0.9565\n",
+       "Name: consumer_complaint_narrative, Length: 17433, dtype: float64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sentiment_df = df.apply(lambda row: sia.polarity_scores(row[\"consumer_complaint_narrative\"]), axis='rows')\n",
+    "df[\"consumer_complaint_narrative\"].apply(lambda val : sia.polarity_scores(val)[\"neg\"])"
+   ]
   }
  ],
  "metadata": {
@@ -787,14 +812,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
