Added bar charts.

--- a/C.C. Complaints.ipynb
+++ b/C.C. Complaints.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "# Create a data frame and read the csv file (Credit Card Complaints)\n",
-    "df = pd.read_csv('credit_card_complaints.csv')"
+    "df_bar = pd.read_csv('credit_card_complaints.csv')"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.rename(columns={\n",
+    "df_bar.rename(columns={\n",
     "    'date_received': 'Date Received',\n",
     "    'product': 'Product',\n",
     "    'sub product': 'Sub-Product',\n",
@@ -95,7 +95,7 @@
     }
    ],
    "source": [
-    "columns_list = df.columns.tolist()\n",
+    "columns_list = df_bar.columns.tolist()\n",
     "print(columns_list)"
    ]
   },
@@ -1295,7 +1295,7 @@
    ],
    "source": [
     "# Define company counts and sort from lowest to highest\n",
-    "company_counts = df['Company Name'].value_counts().sort_values()\n",
+    "company_counts = df_bar['Company Name'].value_counts().sort_values()\n",
     "\n",
     "# Interactive function\n",
     "def interactive_plot(num_companies, scroll_value):\n",
@@ -2542,7 +2542,7 @@
    ],
    "source": [
     "# Define company counts\n",
-    "company_counts = df['Company Name'].value_counts()\n",
+    "company_counts = df_bar['Company Name'].value_counts()\n",
     "\n",
     "\n",
     "# Search bar to search for company name.    \n",
